--- a/DockerPruebas/000-default.conf
+++ b/DockerPruebas/000-default.conf
@@ -1,3 +1,4 @@
+#docker default.conf 
 <VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
